--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
         <!-- Team 2 Members Start -->
         <div class="members members2">
-            <p>Team 2 Members</p>
-            
+            <div>
+                <p>Team 2 Members</p>
+            </div>
             <div class="memberInfo">
                 <span>
                     <img src="https://i.imgur.com/7udTaZG.jpg" alt="Kareem Arafa's Photo">
@@ -40,40 +41,43 @@
         </div>
         <!-- Team 2 Members End  -->
 
+        <hr>
 
         <!-- Team 1 Members Start -->
         <div class="members">
+            <div>
                 <p>Team 1 Members</p>
-
-                <div class="memberInfo">
-                    <span>
-                        <img src="https://i.imgur.com/FQrzC5r.jpg" alt="Abdelrhman Mohamed's Photo">
-                        <br>
-                        <a>Abdelrhman Mohamed</a>
-                    </span>
-
-                    <span>
-                        <img src="https://i.imgur.com/wmtZYVO.jpg" alt="Yara Metwally Ahmed's Photo">
-                        <br>
-                        <a>Yara Metwally Ahmed</a>
-                    </span>
-
-                    <span>
-                        <img src="https://i.imgur.com/bUp2C8G.png" alt="Mona Mabrouk's Photo">
-                        <br>
-                        <a>Mona Mabrouk</a>
-                    </span>
-                </div>
             </div>
-            <!-- Team 1 Members End  -->
 
-            <!-- Form Start -->
-            <div class="form">
-                <p>Make a feedback</p>
-                <form method="get" action="#" target="_blanck">
-                    <button type="submit">Make a feedback</button>
-                </form>
+            <div class="memberInfo">
+                <span>
+                    <img src="https://i.imgur.com/FQrzC5r.jpg" alt="Abdelrhman Mohamed's Photo">
+                    <br>
+                    <a>Abdelrhman Mohamed</a>
+                </span>
+
+                <span>
+                    <img src="https://i.imgur.com/wmtZYVO.jpg" alt="Yara Metwally Ahmed's Photo">
+                    <br>
+                    <a>Yara Metwally Ahmed</a>
+                </span>
+
+                <span>
+                    <img src="https://i.imgur.com/bUp2C8G.png" alt="Mona Mabrouk's Photo">
+                    <br>
+                    <a>Mona Mabrouk</a>
+                </span>
             </div>
-            <!-- Form End -->
+        </div>
+        <!-- Team 1 Members End  -->
+
+        <!-- Form Start -->
+        <div class="form">
+            <p>Make a feedback</p>
+            <form method="get" action="#" target="_blanck">
+                <button type="submit">Make a feedback</button>
+            </form>
+        </div>
+        <!-- Form End -->
     </body>
 </html>
